--- a/2 Classification and Sequence Labelling/2Task3.ipynb
+++ b/2 Classification and Sequence Labelling/2Task3.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bfb15316-59ea-4b04-8419-496cf60a3d92",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3e49d219-b658-4bcd-a442-8dbae02474c5",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "56ec5897-7238-4555-83ae-671177e500cc",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5b93f664-7e77-42c8-aed4-dd4380ad2c30",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a7bf2d9c-92b0-4213-8af5-4f850ced9a9f",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "34003098-92c7-4564-83f8-995a00e71927",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "61b523e6-df24-4565-8d87-eeafa45459f8",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "5948fcaa-5af1-41b6-8c87-c5527bf0d4be",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "1980599d-1580-4d54-ba05-f2f99e4e5549",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
     "tag_pairs=(((y[i], y[i+1]) for i in range(len(y) - 1)) for y in y_by_seq_tr)\n",
     "# Defines transition probability\n",
     "transition_f = ConditionalFreqDist(itertools.chain.from_iterable(tag_pairs))\n",
-    "transition_p = ConditionalProbDist(transition_F, probdist_factory=MLEProbDist)\n",
+    "transition_p = ConditionalProbDist(transition_f, probdist_factory=MLEProbDist)\n",
     "# Creates transition matrix\n",
     "trans_matrix = np.zeros((n_states, n_states))\n",
     "for i in range(n_states):\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "id": "c197b8b6-7e49-4204-9b5c-870181d8c485",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "id": "633ab197-0eb2-4e91-82dc-b1515ca9c06a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "id": "c2c74822-eb66-42e0-b61e-1591fe560663",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "id": "48f67005-01f1-4588-a39b-6fc269b17a0c",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "id": "54629ce1-9daf-4a4c-81dd-beee366f2600",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 19,
    "id": "621019dd-ba7b-478d-8c8e-72c34fce3573",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to train 0.1312382674217224 seconds\n"
+      "Time taken to train 0.054920456409454345 seconds\n"
      ]
     }
    ],
@@ -460,7 +460,7 @@
     "    tag_pairs=(((y[i], y[i+1]) for i in range(len(y) - 1)) for y in y_by_seq_tr)\n",
     "    # Defines transition probability\n",
     "    transition_f = ConditionalFreqDist(itertools.chain.from_iterable(tag_pairs))\n",
-    "    transition_p = ConditionalProbDist(transition_F, probdist_factory=MLEProbDist)\n",
+    "    transition_p = ConditionalProbDist(transition_f, probdist_factory=MLEProbDist)\n",
     "    # Creates transition matrix\n",
     "    trans_matrix = np.zeros((n_states, n_states))\n",
     "    for i in range(n_states):\n",
@@ -485,18 +485,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 20,
    "id": "ed4235ab-bd22-4398-be75-3a6127281dda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken to train 0.1312382674217224 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Code below used to plot a transition matrix. Code has been taken from\n",
     "#https://github.com/NaysanSaran/markov-chain/tree/master.\n",
@@ -507,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 21,
    "id": "b53d5fd8-ce84-4272-b29e-de8d34cb7015",
    "metadata": {},
    "outputs": [],
@@ -626,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 22,
    "id": "79b8bc11-db40-447d-ad89-f6a657890e51",
    "metadata": {},
    "outputs": [],
@@ -863,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 23,
    "id": "d02bf2ea-ee5b-402e-a5c3-16d60d23bdd5",
    "metadata": {},
    "outputs": [
